data/derived/fa15/progs/unify/prog4019.ml.out
Characters 66-67:
  | h :: t -> if k = h then h else assoc d k t;;
                     ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
